tests/e2e/semantics/break_outside.error
Error: syntax error in story at line 3, column 5

3|        break
          ^^^^^

E0044: `break` is allowed only inside loops
