tests/e2e/semantics/break_outside.story
a = 1
try
    break
catch
    a = 2
